--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   geolocator: ^13.0.1
   google_maps_flutter_web: ^0.5.10
   shared_preferences: ^2.3.3
+  firebase_messaging: ^15.1.5
 
 dev_dependencies:
   flutter_test:
